<resources>
    <string name="app_name">Information Desk</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="Register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="Log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
</resources>